--- a/index.html
+++ b/index.html
@@ -2,26 +2,336 @@
 <html lang="en">
 
 <head>
-  <title>Helping develope|jQuery Slider</title>
+  <title>Etch-A-sketch</title>
   <link rel="stylesheet" href="grid.css">
   <script src="jquery.js"></script>
-  <script type="text/javascript" src="slider.js"></script>
+  <script type="text/javascript" src="grid.js"></script>
 </head>
 
   <body>
+    <button onclick="restart()">RESTART</button>
+      <table>
+        <tr>
 
-<div class="wrapper">
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
 
-    <div id="slider">
-      <img id="1" src="images/image1.jpg">
-      <img id="2" src="images/image2.jpg">
-      <img id="3" src="images/image3.jpg">
-      <img id="4" src="images/image4.jpg">
-    </div>
+        </tr>
 
-    <a href="#" class="left" onclick="prev(); return false;">Previous</a>
-    <a href="#" class="right" onclick="next(); return false">Next</a>
-</div>
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+        <tr>
+
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+          <th><div></div></th>
+
+        </tr>
+
+
   </body>
 
 </html>
