--- a/index.html
+++ b/index.html
@@ -9,328 +9,13 @@
 </head>
 
   <body>
-    <button onclick="restart()">RESTART</button>
-      <table>
-        <tr>
 
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
+    <button onclick="restart()">RESTART</button><br /><br /><br /><br />
 
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
-        <tr>
-
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-          <th><div></div></th>
-
-        </tr>
-
+    <table>
+    	<tr>
+    	</tr>
+    </table>
 
   </body>
 
