--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <body>
 
     <button onclick="restart()">RESTART</button><br /><br /><br /><br />
+<div id="wrapper">
+  <div id="createTable">
 
-    <table>
-    	<tr>
-    	</tr>
-    </table>
-
+  </div>
+</div>
   </body>
 
 </html>
